Bug 1601185. Add a function that returns if a user can scroll on a given scroll frame in either direction and use it in EventStateManager::ComputeScrollTargetAndMayAdjustWheelEvent. r=botond

Previously we were just checking overflow hidden here, which is not enough because we can scroll overflow hidden if we are zoomed in.

Differential Revision: https://phabricator.services.mozilla.com/D55918